[project]
name = "streamer-toolbox"
version = "0.1.0"
description = "直播互動助手：設計文件與 stream-core 實作（Pub/Sub 模組）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamer-app",
]

[tool.uv]
managed = true
package = false

[tool.uv.workspace]
members = [
    "app",
    "packages/events",
    "packages/bus",
    "packages/safety",
    "packages/tts",
    "packages/stream-store",
    "packages/identity-oauth",
]

[tool.uv.sources]
streamer-app = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/events/tests",
    "packages/bus/tests",
    "packages/safety/tests",
    "packages/tts/tests",
    "packages/stream-store/tests",
    "packages/identity-oauth/tests",
    "app/tests",
]
pythonpath = [
    "app/src",
    "app/src/app/subscribers",
    "app/src/app/publishers",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = [
    "app",
    "bus",
    "events",
    "identity_oauth",
    "ingress_discord",
    "ingress_ttv_read",
    "ingress_twitch_audio",
    "ingress_twitch_eventsub",
    "ingress_yt_read",
    "safety",
    "stream_store",
    "sub_bot_logic",
    "sub_character_brain",
    "sub_character_face",
    "sub_character_stage",
    "sub_character_voice",
    "sub_io_log",
    "sub_llm",
    "sub_show_overlay",
    "sub_tts",
    "sub_visual",
    "tts",
    "twitch_connector",
]
