[project]
name = "streamer-app"
version = "0.1.0"
description = "直播互動助手應用層：Pub/Sub 程序編排與模組組合"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.4.0",
    "bus",
    "chromadb>=0.5.0",
    "discord.py",
    "emotes",
    "events",
    "faster-whisper>=1.1.0",
    "game-info",
    "identity-oauth",
    "numpy>=1.24.0",
    "obsws-python",
    "pika>=1.3.0",
    "python-dotenv>=1.0.0",
    "safety",
    "sounddevice>=0.5.0",
    "stream-store",
    "streamer-config",
    "streamlink>=7.0.0",
    "ttvchat-lens",
    "tubechat-lens",
    "twitchio",
    "tts",
    "websockets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv.sources]
bus = { workspace = true }
emotes = { workspace = true }
events = { workspace = true }
game-info = { workspace = true }
identity-oauth = { workspace = true }
safety = { workspace = true }
stream-store = { workspace = true }
streamer-config = { workspace = true }
tts = { workspace = true }
ttvchat-lens = { workspace = true }
tubechat-lens = { workspace = true }
