[project]
name = "ingress-discord"
version = "0.1.0"
description = "Discord Gateway 讀取 → publish chat.message"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4.0",
  "pkg-bus",
  "pkg-events",
  "python-dotenv>=1.0.0",
]

[project.scripts]
ingress-discord = "ingress_discord.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingress_discord"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
