[project]
name = "ingress-ttv-read"
version = "0.1.0"
description = "Twitch IRC 匿名唯讀（ttvchat_lens）→ publish chat.message"
requires-python = ">=3.11"
dependencies = [
  "aio-pika>=9.4.0",
  "pkg-bus",
  "pkg-events",
  "python-dotenv>=1.0.0",
  "ttvchat-lens",
]

[project.scripts]
ingress-ttv-read = "ingress_ttv_read.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingress_ttv_read"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
ttvchat-lens = { path = "../../ttv_chat" }
