[project]
name = "ingress-twitch-audio"
version = "0.1.0"
description = "Twitch 直播音訊 STT → publish stt.segment"
requires-python = ">=3.11"
dependencies = [
  "aio-pika>=9.4.0",
  "faster-whisper>=1.1.0",
  "numpy>=1.24.0",
  "pkg-bus",
  "pkg-events",
  "pkg-safety",
  "python-dotenv>=1.0.0",
  "streamlink>=7.0.0",
]

[project.scripts]
ingress-twitch-audio = "ingress_twitch_audio.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingress_twitch_audio"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
pkg-safety = { workspace = true }
