[project]
name = "ingress-twitch-chat"
version = "0.1.0"
description = "Twitch IRC 匿名讀取 → publish chat.message"
requires-python = ">=3.11"
dependencies = [
  "aio-pika>=9.4.0",
  "pkg-bus",
  "pkg-events",
  "python-dotenv>=1.0.0",
  "websockets>=14.0",
]

[project.scripts]
ingress-twitch-chat = "ingress_twitch_chat.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingress_twitch_chat"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
