[project]
name = "ingress-twitch-eventsub"
version = "0.1.0"
description = "Twitch EventSub → RabbitMQ chat.message / eventsub.* publisher"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.4.0",
    "identity-oauth",
    "pkg-bus",
    "pkg-events",
    "python-dotenv>=1.0.0",
    "twitchio>=3.0",
]

[project.scripts]
ingress-twitch-eventsub = "ingress_twitch_eventsub.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingress_twitch_eventsub"]

[tool.uv.sources]
identity-oauth = { workspace = true }
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
