[project]
name = "ingress-yt-read"
version = "0.1.0"
description = "YouTube 直播聊天唯讀 → publish chat.message"
requires-python = ">=3.11"
dependencies = [
  "aio-pika>=9.4.0",
  "pkg-bus",
  "pkg-events",
  "python-dotenv>=1.0.0",
  "tubechat-lens",
]

[project.scripts]
ingress-yt-read = "ingress_yt_read.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingress_yt_read"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
tubechat-lens = { path = "../../yt_chat" }
