[project]
name = "pkg-bus"
version = "0.1.0"
description = "EventBus Protocol 與 MQ adapter（對齊 docs/events.md）"
requires-python = ">=3.11"
dependencies = [
  "pkg-events",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkg_bus"]

[tool.uv.sources]
pkg-events = { workspace = true }
