[project]
name = "pkg-safety"
version = "0.1.0"
description = "SafetyFilter Protocol 與輸入/輸出過濾實作"
requires-python = ">=3.11"
dependencies = [
  "pkg-events",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkg_safety"]

[tool.uv.sources]
pkg-events = { workspace = true }
