[project]
name = "sub-bot-logic"
version = "0.1.0"
description = "訂閱 chat.message / eventsub.* → 規則 BOT → publish chat.reply"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "pkg-bus",
  "pkg-events",
  "python-dotenv>=1.0.0",
]

[project.scripts]
sub-bot-logic = "sub_bot_logic.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_bot_logic"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
