[project]
name = "sub-character-brain"
version = "0.1.0"
description = "產品 D：訂閱 chat.message → 產出 character.turn（可選 chat.reply）"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "pkg-bus",
  "pkg-events",
  "pkg-safety",
  "python-dotenv>=1.0.0",
]

[project.scripts]
sub-character-brain = "sub_character_brain.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_character_brain"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
pkg-safety = { workspace = true }
