[project]
name = "sub-character-face"
version = "0.1.0"
description = "產品 D：訂閱 character.turn → 發布 character.expression.ready"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "pkg-bus",
  "pkg-events",
  "python-dotenv>=1.0.0",
]

[project.scripts]
sub-character-face = "sub_character_face.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_character_face"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
