[project]
name = "sub-character-stage"
version = "0.1.0"
description = "訂閱 character.audio.ready + character.expression.ready → OBS 舞台同步"
requires-python = ">=3.11"
dependencies = [
  "obsws-python>=1.7.0",
  "pika>=1.3.0",
  "pkg-bus",
  "pkg-events",
  "python-dotenv>=1.0.0",
]

[project.scripts]
sub-character-stage = "sub_character_stage.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_character_stage"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
