[project]
name = "sub-character-voice"
version = "0.1.0"
description = "產品 D：訂閱 character.turn → TTS 合成 → character.audio.ready"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "pkg-bus",
  "pkg-events",
  "pkg-tts",
  "python-dotenv>=1.0.0",
]

[project.scripts]
sub-character-voice = "sub_character_voice.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_character_voice"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
pkg-tts = { workspace = true }
