[project]
name = "sub-io-log"
version = "0.1.0"
description = "иЁ‚й–± chat.message в†’ зµ‚з«Їж©џи€‡ JSONL иЁєж–· log"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "pkg-bus",
  "pkg-events",
  "python-dotenv>=1.0.0",
]

[project.scripts]
sub-io-log = "sub_io_log.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_io_log"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
