[project]
name = "sub-llm"
version = "0.1.0"
description = "產品 C：訂閱 chat.message、stt.segment → 產出 chat.reply"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "pkg-bus",
  "pkg-events",
  "pkg-safety",
  "python-dotenv>=1.0.0",
]

[project.scripts]
sub-llm = "sub_llm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_llm"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
pkg-safety = { workspace = true }
