[project]
name = "sub-memory-worker"
version = "0.1.0"
description = "L2 記憶層：定期將聊天記錄摘要並寫入 summaries 表"
requires-python = ">=3.11"
dependencies = [
  "pkg-stream-store",
  "python-dotenv>=1.0.0",
]

[project.scripts]
sub-memory-worker = "sub_memory_worker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_memory_worker"]

[tool.uv.sources]
pkg-stream-store = { workspace = true }
