[project]
name = "sub-show-overlay"
version = "0.1.0"
description = "訂閱 chat.message → 聊天 overlay（HTTP Browser Source + 檔案 IPC）"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "pkg-bus",
  "pkg-events",
  "python-dotenv>=1.0.0",
]

[project.scripts]
sub-show-overlay = "sub_show_overlay.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_show_overlay"]

[tool.hatch.build.targets.wheel.force-include]
"src/sub_show_overlay/assets" = "sub_show_overlay/assets"

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
