[project]
name = "sub-stream-record"
version = "0.1.0"
description = "L1 記錄層：訂閱 chat.message → SQLite（Phase 1 僅聊天室）"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "pkg-bus",
  "pkg-events",
  "pkg-stream-store",
  "python-dotenv>=1.0.0",
]

[project.scripts]
sub-stream-record = "sub_stream_record.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_stream_record"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
pkg-stream-store = { workspace = true }
