[project]
name = "sub-tts"
version = "0.1.0"
description = "и®ВйЦ± chat.message вЖТ иІАзЬЊељИеєХ TTS жЬЧиЃА"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "pkg-bus",
  "pkg-events",
  "pkg-tts",
  "python-dotenv>=1.0.0",
]

[project.scripts]
sub-tts = "sub_tts.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_tts"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
pkg-tts = { workspace = true }
