[project]
name = "twitch-connector"
version = "0.1.0"
description = "訂閱 chat.reply → Twitch Helix 發話（唯一 Egress）"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "pkg-bus",
  "pkg-events",
  "python-dotenv>=1.0.0",
]

[project.scripts]
twitch-connector = "twitch_connector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twitch_connector"]

[tool.uv.sources]
pkg-bus = { workspace = true }
pkg-events = { workspace = true }
