[project]
name = "streamer-config-gui"
version = "0.1.0"
description = "本機 Web 設定小工具（方案 A：只讀寫 STREAMER_CONFIG_DIR）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "streamer-config",
    "uvicorn>=0.32.0",
]

[project.scripts]
streamer-config-gui = "streamer_config_gui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamer_config_gui"]

[tool.hatch.build.targets.wheel.force-include]
"src/streamer_config_gui/static" = "streamer_config_gui/static"

[tool.uv.sources]
streamer-config = { workspace = true }
